<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/txt_view_outros" />

    <Button
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radBG"
        android:text="@string/btTemp" />

    <Button
        android:id="@+id/umid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/temp"
        android:text="@string/btUmid" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/umid"
        android:layout_marginTop="35dp"
        android:text="@string/voltar" />

    <RadioGroup
        android:id="@+id/radBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/TCel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:checked="true"
            android:text="@string/txt_celcius"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/TKel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_kelvin"
            android:layout_marginRight="15dp"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/TFah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_fahrenheit"
            android:textSize="14sp" />
    </RadioGroup>

</RelativeLayout>